# produce_datas_backend

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  start.sh
app/: config.py  dependencies.py  exception.py  main.py  middleware.py
app/core/: config.py  dependencies.py  exception.py  middleware.py
app/dao/: __init__.py  endpoint.py  user.py
app/models/: __init__.py  base.py  first_model.py  git_model.py  resp.py
app/routers/: __init__.py  domain.py  endpoint.py  gits.py  hello.py  parameter.py  report.py  repository.py  schedule.py  task.py  tasks.py  user.py
app/schemas/: __init__.py  base.py  git_schema.py
app/services/: user_service.py
app/utils/: __init__.py  encrypt_utils.py  file_utils.py  git_utils.py  kafka_utils.py  log_utils.py  redis_utils.py  snow_utils.py  wrapper_utils.py
app/vo/: __init__.py  domain_vo.py  endpoint_vo.py  parameter_vo.py  task_vo.py  user_vo.py
scripts/: database.sql  gen_model.py  generate_sqlmodel.py
test/: conftest.py
tests/: conftest.py
tests/utils/: test_log_utils.py
