[project]
name = "fastapi_project"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "MyNextWeekend", email = "jinhu007@outlook.com" }]
dependencies = [
    "fastapi[standard]>=0.115.4",
    "uvicorn>=0.32.0",
    "gitpython>=3.1.43",
    "docker>=7.1.0",
    "sqlmodel>=0.0.22",
    "pymysql>=1.1.1",
    "kafka-python>=2.0.2",
    "pydantic-settings>=2.6.1",
]

readme = "README.md"
requires-python = ">= 3.8"

[tool.pytest.ini_options]
pythonpath = ["app"]

[dependency-groups]
dev = ["pytest>=8.3.3"]


# uv 配置下载源地址
#[tool.uv]
#index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",   # line too long
    "E203",   # whitespace before ':'
    "E722",   # do not use bare 'except'
    "F401",   # module imported but unused
    "F841",   # local variable is assigned to but never used
    "B008",   # do not call assert false
    "C4",     # flake8-comprehensions
]


[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
