[project]
name = "fastapi_project"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "MyNextWeekend", email = "jinhu007@outlook.com" }]
dependencies = [
    "fastapi[standard]>=0.115.4",
    "uvicorn>=0.32.0",
    "gitpython>=3.1.43",
    "docker>=7.1.0",
    "sqlmodel>=0.0.22",
    "pymysql>=1.1.1",
    "kafka-python>=2.0.2",
    "pydantic-settings>=2.6.1",
]

readme = "README.md"
requires-python = ">= 3.8"

[tool.pytest.ini_options]
pythonpath = ["app"]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.3",
    "sqlacodegen>=2.3.0",
]


# uv 配置下载源地址
#[tool.uv]
#index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.format]
quote-style = "double" # use double quotes for strings.
indent-style = "space" # indent with spaces, rather than tabs.
line-ending = "auto"   # automatically detect the appropriate line ending.

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "ARG001", # unused arguments in functions
    "Q",      # flake8-quotes
    "PIE",    # flake8-pie
    "PGH",    # pygrep-hooks
    "PYI",    # flake8-pyi
    "RUF",
]

ignore = [
    "RUF003", # Full width comma
#     "F401", # module imported but unused
#     "F841", # local variable is assigned to but never used
]

# [tool.ruff.lint.isort]
# required-imports = ["from __future__ import annotations"]
